Fixed ContactForm alignment

--- a/src/components/Contact/Contact.css
+++ b/src/components/Contact/Contact.css
@@ -3,11 +3,11 @@
 }
 
 #contact .container {
-  display: flex;
-  justify-content: space-around;
+  display: grid;
+  grid-template-columns: repeat(2, minmax(25rem, 30rem));
+  justify-content: space-evenly;
   align-content: center;
   align-items: center;
-  /* grid-template-columns: repeat(auto-fit, minmax(10rem, 1fr)); */
 }
 
 .contact-us {
@@ -15,13 +15,12 @@
   flex-direction: column;
 }
 
-.contact-card {
-  background-color: whitesmoke;
+.contact-form {
   display: grid;
-  grid-template-columns: repeat(2, minmax(auto, 10rem));
+  grid-template-columns: repeat(2, minmax(auto, 15rem));
+  justify-content: space-evenly;
   gap: 1rem;
   padding: 1rem;
-  margin: 1rem;
   border-radius: 3%;
   border: 0.1rem solid lightgray;
 }
